Fix iDEAL logo on mobile

--- a/style/app.scss
+++ b/style/app.scss
@@ -129,12 +129,11 @@ p, li {
 footer {
   margin-top: 50px;
   background-color: rgba(255, 255, 255, 0.5);
-  min-height: 150px;
   text-align: center;
+  padding: 25px;
   img {
-    margin: 20px;
-    width: 350px;
-    max-width: 100%;
+    width: 100%;
+    max-width: 350px;
   }
 }
 
